--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin-bottom: 20px;
    } 
 
-.BARRA {
+.barra {
     background-color: rgb(0, 0, 0);
     border-radius: 5px;
     margin: auto;
